--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* * {
+  border: 1px solid green;
+} */
+
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 
 body {
@@ -7,9 +11,11 @@ body {
   color: white;
   font-family: 'Amatic SC', cursive;
 }
+
 h1 {
   font-size: 65px;
   margin-bottom: 7px;
+  margin-top: 0;
 }
 
 #container {
@@ -21,71 +27,56 @@ h1 {
 /*NOTE need to fix how size of boxes changes to accom text!*/
  .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  width: 100vw; /*vw: hundredths of the viewport width*/
-  max-width: 80vh; /* vh: hundredths of the viewport height.*/
-  height: 100vw;
-  max-height: 80vh;
-  margin: 0;
+  grid-template-columns: repeat(3, 1fr);
+  width: 70vh; /*vw: hundredths of the viewport height*/
+  height: 70vh;
+  margin: 0 auto; /*this stops the boxes on the grid from expanding when text is input*/
 
-  grid-template-rows: 180px 180px 180px;*/
+  grid-auto-rows: 23.3vh; /* 160px;*/ /*stopping the expansion*/
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;
-  min-height: 1fr 1fr 1fr;
-  min-width: 1fr 1fr 1fr;
+  padding-bottom: 0;
 }
 
 .gridBox {
-  font-size: 100px;
+  align-items: center;
+  margin: 0; /*this seems to keep all boxes inthe middle of the screen??*/
+  font-size: 15vh;
   padding: 0;
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;
   border: 3px solid white;
-  height: 1fr 1fr 1fr;
-  width: 1fr 1fr 1fr;
   overflow: hidden;
+  padding-bottom: 0;
 }
 
-
-/* //NOTE - trying on box model, doesnt work */
-
-/* .row1 {
-  display:inline-flex;
-  border: 3px solid white;
-  min-width: 33%;
-  min-height: 33%;
+#players { /*this is placing buttons@bot*/
+  grid-column-start: 1;
+   grid-column-end: 4;
+   grid-row-start: 4;
+    grid-row-end: 4;
+   display: grid;
+   grid-template-columns: repeat(2, 0.9fr);
+    border: 1px solid white;
+    font-size: 3vh;
+    grid-template-rows: 16vh; /*this moves the player icons up closer to the end of the board grid*/
 }
-.row2 {
-  display:inline-flex;
-  border: 3px solid white;
-  min-width: 33%;
-  min-height: 33%;
+
+.playerInPlay { /*this is for when a player is in play and you use JS to addClass to this and them remove when it's the next persons turn*/
+  color: teal;
+  text-shadow: 0 0 30px #FFCEC9;
 }
-.row3 {
-  display:inline-flex;
-  border: 3px solid white;
-  min-width: 33%;
-  min-height: 33%;
-} */
-/* .grid {
 
-} */
-/* .gridBox {
-  font-size: 100px;
-  width: 30vw;
-  max-width: 20vh;
-  height: 30vw;
-  max-height: 20vh;
+/*.player1Details { /*this is to make the text box hide and then come into view after JS click event
+  opacity: 0;
+}*/
 
-  /* width: 300px;
-  height: 300px; */
-  /* text-align:center; /*this centers text horizontally*/
-  /*line-height: 300px;
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  /*-moz-box-sizing: border-box;    /* Firefox, other Gecko*/
-/*  box-sizing: border-box;
-  border: 3px solid white;
-  display: inline-block;
-} */
+/*.player2Details {
+  opacity: 0;
+}*/
+.icons {
+  color: white;
+  font-size: 30px;
+}
