--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ h1 {
   text-align: center;
 }
 
-/*NOTE need to fix how size of boxes changes to accom text!*/
  .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -33,8 +32,8 @@ h1 {
   margin: 0 auto; /*this stops the boxes on the grid from expanding when text is input*/
 
   grid-auto-rows: 23.3vh; /* 160px;*/ /*stopping the expansion*/
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding-bottom: 0;
 }
@@ -44,26 +43,53 @@ h1 {
   margin: 0; /*this seems to keep all boxes inthe middle of the screen??*/
   font-size: 15vh;
   padding: 0;
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   border: 3px solid white;
   overflow: hidden;
   padding-bottom: 0;
 }
 
-#players { /*this is placing buttons@bot*/
+/* .oWinnerMessage {
+  color: #07B9C7;
+  font-size: 4vh;
+  /* opacity: 0; */
+/* }
+.xWinnerMessage {
+  color: #07B9C7;
+  font-size: 4vh;
+  opacity: 0;
+} */
+#winnerMessage {
+  max-height: 5.2vh;
+  font-size: 4vh;
+  display: grid;
   grid-column-start: 1;
-   grid-column-end: 4;
-   grid-row-start: 4;
-    grid-row-end: 4;
+  grid-column-end: 4;
+  grid-row-start: 4;
+  grid-row-end: 4;
+  opacity: 0;
+  color:#07B9C7;
+}
+#players {
    display: grid;
    grid-template-columns: repeat(2, 0.9fr);
     border: 3px solid black;
     font-size: 3vh;
-    grid-template-rows: 16vh; /*this moves the player icons up closer to the end of the board grid*/
+    grid-template-rows: 16vh;
+    width: 70vh;
+    height: 13vh;
+    margin: 0 auto;
+    grid-auto-rows: 23.3vh;
 }
 
+#form1 {
+  color: white;
+}
+#form2 {
+  color: white;
+}
 .playerInPlay { /*this is for when a player is in play and you use JS to addClass to this and them remove when it's the next persons turn*/
   color: #07B9C7;
   text-shadow: 4px 2px 9px #FFF2BB;
