--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,34 @@ h1 {
   text-align: center;
 }
 
- .grid {
+ /* .outterGrid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 3;
+  width: 70vh; /*vw: hundredths of the viewport height*/
+  /* height: 70vh;
+  margin: 0 auto; /*this stops the boxes on the grid from expanding when text is input*/
+  /* grid-auto-rows: 23.3vh; /* 160px;*/ /*stopping the expansion*/
+  /* -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-bottom: 0;
+  border: 1px solid white;
+} */
+
+/* #p1side {
+  color: white;
+  display: grid;
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 2;
+  grid-row-end: 2;
+} */
+
+.grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 3;
   width: 70vh; /*vw: hundredths of the viewport height*/
   height: 70vh;
   margin: 0 auto; /*this stops the boxes on the grid from expanding when text is input*/
@@ -61,7 +86,7 @@ h1 {
   grid-template-columns: repeat(3, 0.9fr);
   grid-template-rows: 2;
   align-items: center;
-  
+
 }
 
 #winnerMessage p {
