--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@ body {
 }
 
 h1 {
-  font-size: 10.2vw;
+  font-size: 11.5vh;
   margin-bottom: -5px;
-  margin-top: 0;
+  margin-top: -10px;
   color: #F1FDFF;
   text-shadow: 6px 3px 9px #00FFFF;
 }
@@ -71,8 +71,8 @@ h1 {
   grid-row-end: 2;
   position:absolute;
   z-index: 2;
-  width: 70vh;
-  height: 70vh;
+  /* width: 70vh;
+  height: 70vh; */
   margin: 0;
 }
 
@@ -80,14 +80,18 @@ h1 {
   opacity: 0.98;
   font-size: 10vh;
   background-color: #1E2422;
+  width: 70vh;
+  height: 70vh;
+  border-radius: 50%;
   /* color: #F1FDFF; */
   /* text-shadow: 6px 3px 9px #D131FF; */
   background: linear-gradient(270deg, #7ad8c0, #7ad1d8, #7abcd8, #7a7ed8, #b07ad8, #e79fdc);
   -webkit-animation: AnimationName 27s ease infinite;
 -moz-animation: AnimationName 27s ease infinite;
 animation: AnimationName 27s ease infinite;
-  margin: 0;
-  padding: 0;
+box-sizing: border-box;
+  margin:0;
+  padding-top: 99px;
 }
 
 #resetBoard { /*styling for the grid containng message and button*/
@@ -237,11 +241,28 @@ button {
 }
 
 .aniWinner p, .aniDraw p {
-  opacity: 0.9;
-  font-size: 15vw;
-  background-color: #07B9C7;
+  opacity: 0.98;
+  /* background-color: #07B9C7; */
   margin: 0;
   padding: 0;
+  font-size: 3.5vh;
+  /* background-color: #1E2422; */
+  width: 60vw;
+  height: 60vw;
+  border-radius: 50%;
+    /* color: #F1FDFF; */
+    /* text-shadow: 6px 3px 9px #D131FF; */
+    background: linear-gradient(270deg, #7ad8c0, #7ad1d8, #7abcd8, #7a7ed8, #b07ad8, #e79fdc);
+    -webkit-animation: AnimationName 27s ease infinite;
+  -moz-animation: AnimationName 27s ease infinite;
+  animation: AnimationName 27s ease infinite;
+  box-sizing: border-box;
+  margin:0;
+  padding-top: 70px;
+  }
+
+
+
 }
 h1 {
     font-size: 7vh;
