--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ h1 {
 
 .aniWinner p, .aniDraw p {
   opacity: 0.98;
-  font-size: 10vh;
+  font-size: 9vh;
   background-color: #1E2422;
   width: 70vh;
   height: 70vh;
@@ -130,6 +130,8 @@ box-sizing: border-box;
   margin:0;
   padding-top: 2.3em;
 }
+
+
 
 #resetBoard { /*styling for the grid containng message and button*/
   display: grid;
@@ -239,7 +241,7 @@ button {
 
 /*ALL MEDIA STUFF!!!!!!!!*/
 
-@media (max-width: 500px) {
+@media (max-width: 650px) {
   .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -258,6 +260,13 @@ button {
   border: 3px solid white;
   overflow: hidden;
   padding-bottom: 0;
+}
+.upperP1 {
+  visibility: hidden;
+}
+
+.upperP2 {
+  visibility: hidden;
 }
 #players {
    display: grid;
