--- a/css/style.css
+++ b/css/style.css
@@ -18,27 +18,34 @@ body {
   color: white;
   font-family: 'Monoton', cursive;
 }
-
-.logo {
-  display:inline-flex;
+a {
+  text-decoration: none;
 }
+.logo {
+display:inline-flex;
+}
+
 h1 {
+
   font-size: 11.5vh;
   margin-bottom: -5px;
   margin-top: -10px;
   color: #F1FDFF;
 }
-
 .tic {
   text-shadow: 6px 3px 9px hotpink;
 }
-
 .tac {
   text-shadow: 6px 3px 9px #00FFFF;
 }
-
 .toe {
   text-shadow: 6px 3px 9px #AA00C7;
+}
+
+.navi {
+  text-decoration: none;
+  color: #F1FDFF;
+  text-shadow: 6px 3px 9px #FFFF33;
 }
 
 #container {
