--- a/css/stylecomp.css
+++ b/css/stylecomp.css
@@ -19,10 +19,15 @@ body {
   font-family: 'Monoton', cursive;
 }
 
-.logo {
-  display:inline-flex;
+a {
+  text-decoration: none;
 }
+.logo {
+display:inline-flex;
+}
+
 h1 {
+
   font-size: 11.5vh;
   margin-bottom: -5px;
   margin-top: -10px;
@@ -39,6 +44,11 @@ h1 {
 
 .toe {
   text-shadow: 6px 3px 9px #AA00C7;
+}
+.navi {
+  text-decoration: none;
+  color: #F1FDFF;
+  text-shadow: 6px 3px 9px #ADFF2F;
 }
 
 #container {
